# doc-gather

./: .gitignore  main.py  pyproject.toml
docker/: Dockerfile  build.sh  run-docker.sh
gather/: headers.py  markdown.py  schema.py
