[tool.poetry]
name = "doc-gather"
version = "0.1.0"
description = ""
authors = ["遥奕 <jibing.yjb@alibaba-inc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfunvice = "^0.1.12"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
ftfy = "^6.2.0"
thefuzz = "^0.22.1"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
